--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,10 +15,9 @@
 
 <body>
 
-
     <header class="primary-header flex items-center justify-between py-[1rem]">
         <div>
-            <a href=""><img src="./assets/shared/logo.svg"
+            <a href="./index.html"><img src="./assets/shared/logo.svg"
                     alt="space tourism logo" class="logo pl-4">
             </a>
         </div>
@@ -47,7 +46,7 @@
                 sm:gap-[2.5rem] sm:p-[1.5rem] sm:px-10">
 
                 <li class="active">
-                    <a href="index.html" class="font-BarlowCondensed uppercase tracking-[2.7px] 
+                    <a href="./index.html" class="font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 
 
                       sm:border-b-3 sm:border-pureWhite sm:pb-6 sm:outline-none
@@ -59,12 +58,12 @@
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
+                    <a href="./destination.html"
+                        class=" font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 outline-none
                     
                          sm:hover:border-b-3 sm:hover:border-opacity-50 sm:hover:pb-6
-                         sm:focus:border-b-3 sm:focus:border-opacity-50 sm:focus:pb-6
-                        ">
+                         sm:focus:border-b-3 sm:focus:border-opacity-50 sm:focus:pb-6">
                         <span class="font-fw700 mr-[.75rem]"
                             aria-hidden="true">01</span>destination
                     </a>
@@ -128,9 +127,8 @@
                     <p class="text-v12 px-5 leading-6 text-grayishBlue
                     
                     sm:text-v11 sm:px-[7.5rem]
-                    lg:text-v10 lg:pl-0 lg:pr-0 lg:w-[445px]
-
-                    ">Let’s
+                    lg:text-v10 lg:pl-0 lg:pr-0 lg:w-[445px]">
+                        Let’s
                         face it; if you want to go to
                         space, you might as
                         well genuinely go to outer space and not
