style add for destination pages

--- a/layouts/destination-europa.html
+++ b/layouts/destination-europa.html
@@ -90,7 +90,9 @@
 
     <main>
         <div class="destination__bg absolute text-pureWhite text-center top-0 -z-10
-            flex items-center justify-center">
+            flex items-center justify-center
+            
+            ">
             <div class="container__img relative bg-desBgPhn bg-no-repeat bg-center 
                 bg-cover w-screen h-[926px]
                 md:bg-desBgTab md:h-screen md:w-screen
@@ -101,7 +103,7 @@
 
         <div class="destination flex flex-col items-center justify-center 
         
-        lg:flex-row lg:justify-around lg:items-center
+        lg:flex-row lg:justify-around lg:items-center lg:overflow-x-hidden
         1xl:my-20
         ">
             <div class="destination__top">
@@ -114,11 +116,10 @@
                         aria-hidden="true">01</span> pick
                     your destination
                 </h1>
-                <div class="destination__place bg-desMoon bg-cover bg-no-repeat bg-center h-[170px] w-[170px] my-3
+                <div class="destination__place bg-desEuropa bg-cover bg-no-repeat bg-center h-[170px] w-[170px] my-3
                     
                     md:h-[300px] sm:w-[300px]
-                    lg:h-[400px] lg:w-[400px]
-                    ">
+                    lg:h-[400px] lg:w-[400px]">
                 </div>
             </div>
 
@@ -157,44 +158,41 @@
                         
                         md:text-v3
                         lg:text-left lg:text-v2">
-                        moon
+                        europa
                     </h2>
                     <p class=" font-Barlow text-v12 text-center text-grayishBlue px-6 
                         
                         md:w-[570px]
                         lg:w-[445px] lg:text-left lg:pl-0 lg:text-v10">
-                        See our planet as you’ve never seen
-                        it before. A
-                        perfect relaxing trip away to help regain
-                        perspective and come back refreshed. While you’re
-                        there, take in some history by visiting
-                        the Luna 2 and Apollo 11 landing sites.
-                    </p>
+                        The smallest of the four Galilean moons orbiting
+                        Jupiter, Europa is a winter lover’s dream. With an icy
+                        surface, it’s perfect for a bit of ice skating, curling,
+                        hockey, or simple relaxation in your snug wintery cabin.
 
-                    <hr class="my-6 w-[85vw] m-auto border-pureWhite/40
+                        <hr class="my-6 w-[85vw] m-auto border-pureWhite/40
                     
                     md:w-[65vw] md:my-8
                     lg:w-[33vw]">
 
-                    <div class="travel-info text-center first-letter:
+                        <div class="travel-info text-center
                     
                     md:flex items-center md:justify-center md:flex-row md:gap-16 
                     lg:text-left lg:justify-evenly">
-                        <h3 class="font-Bellefair text-v7 font-fw400 uppercase flex flex-col tracking-[2.40px] my-7 text-pureWhite 
+                            <h3 class="font-Bellefair text-v7 font-fw400 uppercase flex flex-col tracking-[2.40px] my-7 text-pureWhite 
                             lg:text-v7">
-                            <span
-                                class=" font-BarlowCondensed text-v13 text-grayishBlue ">avg
-                                distance</span>384,400 km
-                        </h3>
+                                <span
+                                    class=" font-BarlowCondensed text-v13 text-grayishBlue ">avg
+                                    distance</span>628 mil. km
+                            </h3>
 
-                        <h4 class="font-Bellefair text-v7 font-fw400 uppercase flex flex-col tracking-[2.40px] my-7 text-pureWhite 
+                            <h4 class="font-Bellefair text-v7 font-fw400 uppercase flex flex-col tracking-[2.40px] my-7 text-pureWhite 
                             lg:text-v7">
-                            <span
-                                class=" font-BarlowCondensed text-v13 text-grayishBlue ">est.
-                                travel time
-                            </span>3 days
-                        </h4>
-                    </div>
+                                <span
+                                    class=" font-BarlowCondensed text-v13 text-grayishBlue ">est.
+                                    travel time
+                                </span>3 years
+                            </h4>
+                        </div>
                 </div>
             </div>
         </div>
