--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,49 +46,41 @@
                 sm:gap-[2.5rem] sm:p-[1.5rem] sm:px-10">
 
                 <li class="active">
-                    <a href="./index.html" class="font-BarlowCondensed uppercase tracking-[2.7px] 
-                    font-fw400 text-v11 
-
-                      sm:border-b-3 sm:border-pureWhite sm:pb-6 sm:outline-none
-                      sm:hover:border-b-3 sm:hover:border-opacity-50 
-                      sm:focus:border-b-3 sm:focus:border-opacity-50 ">
+                    <a href="./index.html" class=" relative font-BarlowCondensed uppercase tracking-[2.7px] 
+                    font-fw400 text-v11 sm:navHover
+                    ">
                         <span class="font-fw700 mr-[.75rem]"
                             aria-hidden="true">00</span>Home
                     </a>
                 </li>
 
                 <li>
-                    <a href="./destination.html"
-                        class=" font-BarlowCondensed uppercase tracking-[2.7px] 
-                    font-fw400 text-v11 outline-none
-                    
-                         sm:hover:border-b-3 sm:hover:border-opacity-50 sm:hover:pb-6
-                         sm:focus:border-b-3 sm:focus:border-opacity-50 sm:focus:pb-6">
+                    <a href="./destination.html" class=" relative font-BarlowCondensed uppercase
+                     tracking-[2.7px] font-fw400 text-v11 outline-none 
+                     sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
                             aria-hidden="true">01</span>destination
                     </a>
                 </li>
 
                 <li>
-                    <a href=""
-                        class=" font-BarlowCondensed uppercase
-                     tracking-[2.7px] font-fw400 text-v11 outline-none
+                    <a href="" class=" relative font-BarlowCondensed uppercase
+                     tracking-[2.7px] font-fw400 text-v11 outline-none 
+                     sm:navHover
                      
-                         sm:hover:border-b-3 sm:hover:border-opacity-50 sm:hover:pb-6
-                         sm:focus:border-b-3 sm:focus:border-opacity-50 sm:focus:pb-6">
+                        ">
                         <span class="font-fw700 mr-[.75rem]"
                             aria-hidden="true">02</span>crew
                     </a>
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
+                    <a href="" class=" relative font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 outline-none
 
-                         sm:hover:border-b-3 sm:hover:border-opacity-50
-                         sm:hover:pb-6
-                         sm:focus:border-b-3 sm:focus:border-opacity-50
-                         sm:focus:pb-6">
+                    sm:navHover
+
+                        ">
                         <span class="font-fw700 mr-[.75rem]"
                             aria-hidden="true">03</span>technology
                     </a>
