fix screen releted issue

--- a/layouts/destination-europa.html
+++ b/layouts/destination-europa.html
@@ -96,15 +96,15 @@
             <div class="container__img relative bg-desBgPhn bg-no-repeat bg-center 
                 bg-cover w-screen h-[926px]
                 md:bg-desBgTab md:h-screen md:w-screen
-                lg:bg-desBgDesk lg:h-screen lg:w-screen
+                lg:bg-desBgDesk lg:min-h-[768px]
                 ">
             </div>
         </div>
 
         <div class="destination flex flex-col items-center justify-center 
         
-        lg:flex-row lg:justify-around lg:items-center lg:overflow-x-hidden
-        1xl:my-20
+        lg:flex-row lg:justify-around lg:items-center lg:overflow-x-hidden lg:p-8
+        1xl:p-16
         ">
             <div class="destination__top">
                 <h1 class="font-BarlowCondensed text-v10 uppercase trackin-[2.4px] font-fw400 text-pureWhite py-8
@@ -119,7 +119,7 @@
                 <div class="destination__place bg-desEuropa bg-cover bg-no-repeat bg-center h-[170px] w-[170px] my-3
                     
                     md:h-[300px] sm:w-[300px]
-                    lg:h-[400px] lg:w-[400px]">
+                    lg:h-[445px] lg:w-[445px]">
                 </div>
             </div>
 
