--- a/layouts/destination.html
+++ b/layouts/destination.html
@@ -94,22 +94,20 @@
             <div class="container__img relative bg-desBgPhn bg-no-repeat bg-center 
                 bg-cover w-screen h-[926px]
                 md:bg-desBgTab md:h-screen md:w-screen
-                lg:bg-desBgDesk lg:h-screen lg:w-screen
+                lg:bg-desBgDesk lg:h-screen lg:min-h-[768px]
                 ">
             </div>
         </div>
 
         <div class="destination flex flex-col items-center justify-center 
         
-        lg:flex-row lg:justify-around lg:items-center
-        1xl:my-20
-        ">
+        lg:flex-row lg:justify-around lg:items-center lg:p-8
+        1xl:p-16">
             <div class="destination__top">
                 <h1 class="font-BarlowCondensed text-v10 uppercase trackin-[2.4px] font-fw400 text-pureWhite py-8
                     
                     md:text-v9 
-                    lg:text-v7
-                    ">
+                    lg:text-v7">
                     <span class="font-fw700 text-pureWhite/50 mr-3"
                         aria-hidden="true">01</span> pick
                     your destination
@@ -117,7 +115,7 @@
                 <div class="destination__place bg-desMoon bg-cover bg-no-repeat bg-center h-[170px] w-[170px] my-3
                     
                     md:h-[300px] sm:w-[300px]
-                    lg:h-[400px] lg:w-[400px]
+                    lg:h-[445px] lg:w-[445px]
                     ">
                 </div>
             </div>
