--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,8 +22,8 @@
             </a>
         </div>
 
-        <div
-            class="nav-line lg:fixed lg:border-t-3 lg:w-[42%] lg:border-pureWhite/50 lg:left-[18%] lg:-z-[1]">
+        <div class="nav-line lg:block lg:border-t-3 lg:w-[44%] lg:ml-[10%]
+            lg:border-pureWhite/50 lg:-z-[1]">
         </div>
 
         <button class="mobile-nav-toggle block absolute z-[9999] bg-transparent bg-hamburger
@@ -47,8 +47,7 @@
 
                 <li class="active">
                     <a href="./index.html" class=" relative font-BarlowCondensed uppercase tracking-[2.7px] 
-                    font-fw400 text-v11 sm:navHover
-                    ">
+                    font-fw400 text-v11 sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
                             aria-hidden="true">00</span>Home
                     </a>
@@ -66,9 +65,7 @@
                 <li>
                     <a href="" class=" relative font-BarlowCondensed uppercase
                      tracking-[2.7px] font-fw400 text-v11 outline-none 
-                     sm:navHover
-                     
-                        ">
+                     sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
                             aria-hidden="true">02</span>crew
                     </a>
@@ -78,9 +75,7 @@
                     <a href="" class=" relative font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 outline-none
 
-                    sm:navHover
-
-                        ">
+                    sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
                             aria-hidden="true">03</span>technology
                     </a>
@@ -94,10 +89,10 @@
         <div class="hero-container absolute text-pureWhite text-center top-0 -z-10
             flex items-center justify-center">
             <div class="hero-img relative bg-homeBgPhn bg-no-repeat bg-center 
-                bg-cover w-screen h-screen
+                bg-cover w-screen h-screen 
                 
             sm:bg-homeBgTab
-            lg:bg-homeBgDesk ">
+            lg:bg-homeBgDesk lg:h-screen lg:min-h-[768px] ">
             </div>
             <div class="space absolute mt-10 lg:flex lg:flex-col lg:items-center
              lg:justify-center lg:text-center
