--- a/layouts/css/style.css
+++ b/layouts/css/style.css
@@ -626,10 +626,6 @@ body{
   justify-content: space-between;
 }
 
-.overflow-x-hidden{
-  overflow-x: hidden;
-}
-
 .rounded-\[50\%\]{
   border-radius: 50%;
 }
@@ -848,6 +844,12 @@ body{
 
 .backdrop-blur-\[5rem\]{
   --tw-backdrop-blur: blur(5rem);
+  -webkit-backdrop-filter: var(--tw-backdrop-filter);
+          backdrop-filter: var(--tw-backdrop-filter);
+}
+
+.backdrop-blur-\[10rem\]{
+  --tw-backdrop-blur: blur(10rem);
   -webkit-backdrop-filter: var(--tw-backdrop-filter);
           backdrop-filter: var(--tw-backdrop-filter);
 }
@@ -1140,10 +1142,6 @@ body{
     margin-left: 10%;
   }
 
-  .lg\:ml-\[12\%\]{
-    margin-left: 12%;
-  }
-
   .lg\:block{
     display: block;
   }
@@ -1152,24 +1150,20 @@ body{
     display: flex;
   }
 
+  .lg\:h-\[445px\]{
+    height: 445px;
+  }
+
   .lg\:h-screen{
     height: 100vh;
   }
 
-  .lg\:h-\[400px\]{
-    height: 400px;
+  .lg\:min-h-\[768px\]{
+    min-height: 768px;
   }
 
   .lg\:w-\[44\%\]{
     width: 44%;
-  }
-
-  .lg\:w-screen{
-    width: 100vw;
-  }
-
-  .lg\:w-\[400px\]{
-    width: 400px;
   }
 
   .lg\:w-\[445px\]{
@@ -1182,10 +1176,6 @@ body{
 
   .lg\:w-\[42\%\]{
     width: 42%;
-  }
-
-  .lg\:w-\[48\%\]{
-    width: 48%;
   }
 
   .lg\:flex-row{
@@ -1240,10 +1230,6 @@ body{
     padding: 2rem;
   }
 
-  .lg\:p-9{
-    padding: 2.25rem;
-  }
-
   .lg\:pl-0{
     padding-left: 0px;
   }
@@ -1274,6 +1260,16 @@ body{
 
   .lg\:text-v8{
     font-size: 1.5rem;
+  }
+
+  .lg\:after\:absolute::after{
+    content: var(--tw-content);
+    position: absolute;
+  }
+
+  .lg\:after\:w-full::after{
+    content: var(--tw-content);
+    width: 100%;
   }
 }
 
@@ -1345,8 +1341,7 @@ body{
     margin-bottom: 0.5rem;
   }
 
-  .\31xl\:my-24{
-    margin-top: 6rem;
-    margin-bottom: 6rem;
+  .\31xl\:p-16{
+    padding: 4rem;
   }
 }
