--- a/layouts/index.html
+++ b/layouts/index.html
@@ -47,7 +47,8 @@
 
                 <li class="active">
                     <a href="./index.html" class=" relative font-BarlowCondensed uppercase tracking-[2.7px] 
-                    font-fw400 text-v11 sm:navHover">
+                    font-fw400 text-v11 outline-none
+                    sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
                             aria-hidden="true">00</span>Home
                     </a>
