--- a/layouts/destination-titan.html
+++ b/layouts/destination-titan.html
@@ -47,11 +47,11 @@
                 sm:gap-[2.5rem] sm:p-[1.5rem] sm:px-10">
 
                 <li class="active">
-                    <a href="./index.html" class="font-BarlowCondensed uppercase tracking-[2.7px] 
-                    font-fw400 text-v11 
-
-                    sm:relative sm:navHover
-                      " aria-hidden="true">00</span>Home
+                    <a href="./index.html" class=" relative font-BarlowCondensed uppercase tracking-[2.7px] 
+                    font-fw400 text-v11 outline-none
+                    sm:navHover">
+                        <span class="font-fw700 mr-[.75rem]"
+                            aria-hidden="true">00</span>Home
                     </a>
                 </li>
 
@@ -126,26 +126,26 @@
                     
                     lg:justify-start">
                     <li>
-                        <a class="navbar__link font-BarlowCondensed mx-4 tracking-[2.36px] sm:relative sm:navHover
+                        <a class="navbar__link font-BarlowCondensed mx-4 tracking-[2.36px] outline-none sm:relative sm:navHover
                         
                         " href="./destination.html">moon
                         </a>
                     </li>
 
                     <li>
-                        <a class="navbar__link font-BarlowCondensed mx-4 tracking-[2.36px] sm:relative sm:navHover"
+                        <a class="navbar__link font-BarlowCondensed mx-4 tracking-[2.36px] outline-none sm:relative sm:navHover"
                             href="./destination-mars.html">mars
                         </a>
                     </li>
 
                     <li>
-                        <a class="navbar__link font-BarlowCondensed mx-4 tracking-[2.36px] sm:relative sm:navHover"
+                        <a class="navbar__link font-BarlowCondensed mx-4 tracking-[2.36px] outline-none sm:relative sm:navHover"
                             href="./destination-europa.html">europa
                         </a>
                     </li>
 
                     <li>
-                        <a class="navbar__link font-BarlowCondensed mx-4 tracking-[2.36px] sm:relative sm:navHover"
+                        <a class="navbar__link font-BarlowCondensed mx-4 tracking-[2.36px] outline-none sm:relative sm:navHover"
                             href="./destination-titan.html">titan
                         </a>
                     </li>
