--- a/layouts/destination-europa.html
+++ b/layouts/destination-europa.html
@@ -66,7 +66,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase
+                    <a href="./crew.html" class=" font-BarlowCondensed uppercase
                      tracking-[2.7px] font-fw400 text-v11 outline-none
                      
                      sm:relative sm:navHover">
@@ -76,7 +76,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
+                    <a href="./techonlogy.html" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 outline-none
                     sm:relative sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
@@ -90,22 +90,18 @@
 
     <main>
         <div class="destination__bg absolute text-pureWhite text-center top-0 -z-10
-            flex items-center justify-center
-            
-            ">
+            flex items-center justify-center">
             <div class="container__img relative bg-desBgPhn bg-no-repeat bg-center 
                 bg-cover w-screen h-[926px]
                 md:bg-desBgTab md:h-screen md:w-screen
-                lg:bg-desBgDesk lg:min-h-[768px]
-                ">
+                lg:bg-desBgDesk lg:min-h-[768px]">
             </div>
         </div>
 
         <div class="destination flex flex-col items-center justify-center 
         
         lg:flex-row lg:justify-around lg:items-center lg:overflow-x-hidden lg:p-8
-        1xl:p-16
-        ">
+        1xl:p-16">
             <div class="destination__top">
                 <h1 class="font-BarlowCondensed text-v10 uppercase trackin-[2.4px] font-fw400 text-pureWhite py-8
                     
