--- a/layouts/destination.html
+++ b/layouts/destination.html
@@ -15,7 +15,6 @@
 
 <body>
 
-
     <header class="primary-header flex items-center justify-between py-[1rem]">
         <div>
             <a href="./index.html"><img src="./assets/shared/logo.svg"
@@ -65,7 +64,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase
+                    <a href="./crew.html" class=" font-BarlowCondensed uppercase
                      tracking-[2.7px] font-fw400 text-v11 outline-none
                      
                      sm:relative sm:navHover">
