--- a/layouts/index.html
+++ b/layouts/index.html
@@ -64,7 +64,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" relative font-BarlowCondensed uppercase
+                    <a href="./crew.html" class=" relative font-BarlowCondensed uppercase
                      tracking-[2.7px] font-fw400 text-v11 outline-none 
                      sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
@@ -73,7 +73,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" relative font-BarlowCondensed uppercase tracking-[2.7px] 
+                    <a href="./technology.html" class=" relative font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 outline-none
 
                     sm:navHover">
