--- a/layouts/destination-titan.html
+++ b/layouts/destination-titan.html
@@ -66,7 +66,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase
+                    <a href="./crew.html" class=" font-BarlowCondensed uppercase
                      tracking-[2.7px] font-fw400 text-v11 outline-none
                      
                      sm:relative sm:navHover">
@@ -76,7 +76,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
+                    <a href="./technology.html" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 outline-none
                     sm:relative sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
