add crew page style

--- a/layouts/crew-specialist.html
+++ b/layouts/crew-specialist.html
@@ -106,7 +106,7 @@
 
             <div class="crew__top">
 
-                <div class="crew__img bg-commander w-[177px]
+                <div class="crew__img bg-mission w-[177px]
                     h-[222px] bg-no-repeat bg-cover
 
                     sm:w-[356px] sm:h-[442px] sm:bottom-0 sm:fixed sm:-mx-[8rem]
@@ -182,21 +182,19 @@
                        md:text-v5 md:pt-4
                        lg:items-start">
                         <span class=" text-v11 text-pureWhite/50 md:text-v8"
-                            aria-hidden="true">Commander
-                        </span>Douglas Hurley
+                            aria-hidden="true">Mission Specialist
+                        </span>Mark Shuttleworth
                     </h2>
 
                     <p class=" text-grayishBlue px-4 py-4
 
                     sm:w-[458px]
                     lg:px-0 lg:w-[440px]">
-                        Douglas Gerald Hurley
-                        is an
-                        American engineer, former
-                        Marine Corps pilot
-                        and former NASA astronaut. He launched into space for
-                        the third time as
-                        commander of Crew Dragon Demo-2.
+                        Mark Richard Shuttleworth is the founder and CEO of
+                        Canonical, the company behind
+                        the Linux-based Ubuntu operating system. Shuttleworth
+                        became the first South
+                        African to travel to space as a space tourist.
                     </p>
                 </div>
             </div>
