--- a/layouts/crew-engineer.html
+++ b/layouts/crew-engineer.html
@@ -106,13 +106,13 @@
 
             <div class="crew__top">
 
-                <div class="crew__img bg-commander w-[177px]
+                <div class="crew__img bg-flight w-[200px]
                     h-[222px] bg-no-repeat bg-cover
 
-                    sm:w-[356px] sm:h-[442px] sm:bottom-0 sm:fixed sm:-mx-[8rem]
+                    sm:w-[420px] sm:h-[442px] sm:bottom-0 sm:fixed sm:-mx-[12rem]
                     md:w-[402px] md:h-[542px] md:my-auto
-                    lg:-mx-[28rem]
-                    xl:-mx-[30rem]">
+                    lg:-mx-[28rem] lg:w-[510px]
+                    xl:-mx-[35rem]">
                 </div>
             </div>
 
@@ -182,21 +182,19 @@
                        md:text-v5 md:pt-4
                        lg:items-start">
                         <span class=" text-v11 text-pureWhite/50 md:text-v8"
-                            aria-hidden="true">Commander
-                        </span>Douglas Hurley
+                            aria-hidden="true">flight engineer
+                        </span>Anousheh Ansari
                     </h2>
 
                     <p class=" text-grayishBlue px-4 py-4
 
                     sm:w-[458px]
                     lg:px-0 lg:w-[440px]">
-                        Douglas Gerald Hurley
-                        is an
-                        American engineer, former
-                        Marine Corps pilot
-                        and former NASA astronaut. He launched into space for
-                        the third time as
-                        commander of Crew Dragon Demo-2.
+                        Anousheh Ansari is an Iranian American engineer and
+                        co-founder of Prodea Systems.
+                        Ansari was the fourth self-funded space tourist, the
+                        first self-funded woman to
+                        fly to the ISS, and the first Iranian in space.
                     </p>
                 </div>
             </div>
