--- a/layouts/crew-pilot.html
+++ b/layouts/crew-pilot.html
@@ -106,13 +106,13 @@
 
             <div class="crew__top">
 
-                <div class="crew__img bg-commander w-[177px]
+                <div class="crew__img bg-pilot w-[190px]
                     h-[222px] bg-no-repeat bg-cover
 
-                    sm:w-[356px] sm:h-[442px] sm:bottom-0 sm:fixed sm:-mx-[8rem]
-                    md:w-[402px] md:h-[542px] md:my-auto
-                    lg:-mx-[28rem]
-                    xl:-mx-[30rem]">
+                    sm:w-[416px] sm:h-[442px] sm:bottom-0 sm:fixed sm:-mx-[8rem]
+                    md:w-[400px] md:h-[542px] md:my-auto
+                    lg:-mx-[28rem] lg:w-[470px]
+                    xl:-mx-[35rem]">
                 </div>
             </div>
 
@@ -182,21 +182,21 @@
                        md:text-v5 md:pt-4
                        lg:items-start">
                         <span class=" text-v11 text-pureWhite/50 md:text-v8"
-                            aria-hidden="true">Commander
-                        </span>Douglas Hurley
+                            aria-hidden="true">pilot
+                        </span>victor glover
                     </h2>
 
                     <p class=" text-grayishBlue px-4 py-4
 
                     sm:w-[458px]
                     lg:px-0 lg:w-[440px]">
-                        Douglas Gerald Hurley
-                        is an
-                        American engineer, former
-                        Marine Corps pilot
-                        and former NASA astronaut. He launched into space for
-                        the third time as
-                        commander of Crew Dragon Demo-2.
+                        Pilot on the first operational flight of the SpaceX Crew
+                        Dragon to the
+                        International Space Station. Glover is a commander in
+                        the U.S. Navy where
+                        he pilots an F/A-18.He was a crew member of Expedition
+                        64, and served as a
+                        station systems flight engineer.
                     </p>
                 </div>
             </div>
